sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:51: error: unclosed comment
  deplacerTrou((depart+1)%nbBases, 0, -1);/*
                                          ^SelectBaseball:51: error: unclosed comment
  deplacerTrou((depart+1)%nbBases, 0, -1);/*
                                          ^SelectBaseball:51: error: unclosed comment
  deplacerTrou((depart+1)%nbBases, 0, -1);/*
                                          ^SelectBaseball:51: error: unclosed comment
  deplacerTrou((depart+1)%nbBases, 0, -1);/*
                                          ^SelectBaseball:1: error: Missing closing brace `}' assumed here
override def run()
^SelectBaseball:1: error: expected start of definition
override def run()
         ^SelectBaseball:2: error: expected class or object definition
{
^SelectBaseball:33: error: expected class or object definition
def deplacerTrou(arrive:Int, pos:Int, sens:Int) //sens:-1 ou 1
^SelectBaseball:34: error: expected class or object definition
{
^SelectBaseball:43: error: expected class or object definition
def deplacerJoueur(pos:Int, depart:Int, arrive:Int, origBaseTrou:Int, origPosTrou:Int)
^SelectBaseball:44: error: expected class or object definition
{  
^SelectBaseball:51: error: unclosed comment
  deplacerTrou((depart+1)%nbBases, 0, -1);/*
                                          ^